# api/docs/openapi.yaml
@@ -1666,6 +1666,70 @@ paths:
             "*/*":
               schema:
                 type: string
+  /password-reset/request:
+    post:
+      description: Request a password reset email to be sent to the user.
+      tags:
+        - Auth
+      summary: Request Password Reset
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/handlers.RequestPasswordResetRequest"
+        description: Request Password Reset Request
+        required: true
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: invalid request body
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+  /password-reset/reset:
+    post:
+      description: Reset the user's password using the token sent to their email.
+      tags:
+        - Auth
+      summary: Reset Password
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/handlers.ResetPasswordRequest"
+        description: Reset Password Request
+        required: true
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: invalid request body
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              schema:
+                type: string
   "/plan-groups/{id}":
     get:
       security:
@@ -3774,6 +3838,18 @@ components:
         description:
           type: string
         name:
+          type: string
+    handlers.RequestPasswordResetRequest:
+      type: object
+      properties:
+        email:
+          type: string
+    handlers.ResetPasswordRequest:
+      type: object
+      properties:
+        password:
+          type: string
+        token:
           type: string
     handlers.SellerRequest:
       type: object
